# school-inventory

./: .gitignore  CMakeLists.txt  README.md
data/: init_db.sql
include/: Equipment.hpp  Logger.hpp  database.hpp
src/: Equipment.cpp  Logger.cpp  database.cpp  main.cpp
tests/: database_test.cpp
